corpus/foo.txt
================================================================================
skip
================================================================================
skip
--------------------------------------------------------------------------------

(program
  (stmt
    (skip)))
