corpus/tests.txt
================================================================================
assignment
================================================================================

x := 3; skip
--------------------------------------------------------------------------------

(program
  (stmt
    (seq
      (stmt
        (asgn
          (id)
          (num)))
      (stmt
        (skip)))))

================================================================================
prec
================================================================================

x := 1 * 2 + 5 - 4

--------------------------------------------------------------------------------

(program
  (stmt
    (asgn
      (id)
      (minus
        (plus
          (times
            (num)
            (num))
          (num))
        (num)))))

================================================================================
prog
================================================================================

if x = y + 1 + 2 - y * 6 + 3 then x := x * 1; y := 0 else skip end

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      (eqb
        (id)
        (plus
          (minus
            (plus
              (plus
                (id)
                (num))
              (num))
            (times
              (id)
              (num)))
          (num)))
      (stmt
        (seq
          (stmt
            (asgn
              (id)
              (times
                (id)
                (num))))
          (stmt
            (asgn
              (id)
              (num)))))
      (stmt
        (skip)))))
